--- a/AttendanceManagementSystem/AttendanceManagementSystem.csproj
+++ b/AttendanceManagementSystem/AttendanceManagementSystem.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomDialogBox\CustomDialogBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomDialogBox\CustomDialogBox.Designer.cs">
+      <DependentUpon>CustomDialogBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,12 @@
     <Compile Include="Forms\AddStudent.Designer.cs">
       <DependentUpon>AddStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\StudentRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\StudentRegistration.Designer.cs">
+      <DependentUpon>StudentRegistration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Users.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,6 +102,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>StudentAttendanceSystemDBDataSet.xsd</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CustomDialogBox\CustomDialogBox.resx">
+      <DependentUpon>CustomDialogBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
@@ -98,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddStudent.resx">
       <DependentUpon>AddStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\StudentRegistration.resx">
+      <DependentUpon>StudentRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -151,6 +169,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\download %281%29.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\question-mark2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\man-with-question.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icontexto-message-types-question-blue.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
