--- a/AttendanceManagementSystem/AttendanceManagementSystem.csproj
+++ b/AttendanceManagementSystem/AttendanceManagementSystem.csproj
@@ -64,6 +64,12 @@
     <Compile Include="CustomDialogBox\CustomDialogBox.Designer.cs">
       <DependentUpon>CustomDialogBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustomDialogBox\OKDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomDialogBox\OKDialog.Designer.cs">
+      <DependentUpon>OKDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +110,9 @@
     </Compile>
     <EmbeddedResource Include="CustomDialogBox\CustomDialogBox.resx">
       <DependentUpon>CustomDialogBox.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CustomDialogBox\OKDialog.resx">
+      <DependentUpon>OKDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
